[gd_scene load_steps=68 format=3 uid="uid://csqktr6ixyato"]

[ext_resource type="Script" path="res://Scripts/Hero.gd" id="1_43ipw"]
[ext_resource type="Texture2D" uid="uid://050tdjf5b57n" path="res://assets/3 Cyborg/Cyborg_death.png" id="2_2ior6"]
[ext_resource type="Texture2D" uid="uid://huv5y4v78n8o" path="res://assets/3 Cyborg/Cyborg_doublejump.png" id="2_a50ia"]
[ext_resource type="Texture2D" uid="uid://b8he4ug50vnxx" path="res://assets/Guns&Bullets/Idle1.png" id="2_vptny"]
[ext_resource type="Texture2D" uid="uid://debisd6mjmfga" path="res://assets/Guns&Bullets/Jump1.png" id="3_ieg1k"]
[ext_resource type="Texture2D" uid="uid://dhiabh1xfdvky" path="res://assets/3 Cyborg/Cyborg_climb.png" id="3_k6dpk"]
[ext_resource type="Texture2D" uid="uid://bo7sscl6biwig" path="res://assets/Guns&Bullets/Run1.png" id="4_nq80s"]
[ext_resource type="AudioStream" uid="uid://ce5s2ggmqf78e" path="res://assets/FutrueSFX/Jump2.wav" id="9_weta3"]
[ext_resource type="PackedScene" uid="uid://daeuuspwxjeag" path="res://Scenes/Gun.tscn" id="10_0uu0a"]
[ext_resource type="Texture2D" uid="uid://00s18hlgmpih" path="res://assets/etc/color_burst_25.png" id="10_o76pr"]
[ext_resource type="AudioStream" uid="uid://dnjr7q6plu8wi" path="res://assets/FutrueSFX/PlayerDie.wav" id="10_qhkyu"]
[ext_resource type="Texture2D" uid="uid://dlxc1yfemuohe" path="res://assets/etc/super_saiyan_spritesheet.png" id="11_6s631"]
[ext_resource type="Texture2D" uid="uid://dtmoad6blffsk" path="res://assets/etc/flare_3.png" id="11_x6ujp"]
[ext_resource type="PackedScene" uid="uid://v1wqgbnfesbp" path="res://Scenes/HealthBar.tscn" id="12_i3t22"]
[ext_resource type="Texture2D" uid="uid://c1t7ic4fo0him" path="res://assets/etc/health.png" id="12_j60bv"]
[ext_resource type="Script" path="res://Scripts/Camera.gd" id="12_ofnp4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_strd3"]
atlas = ExtResource("2_2ior6")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wkfk8"]
atlas = ExtResource("2_2ior6")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wi1j"]
atlas = ExtResource("2_2ior6")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ism3l"]
atlas = ExtResource("2_2ior6")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jynsj"]
atlas = ExtResource("2_2ior6")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xefeu"]
atlas = ExtResource("2_2ior6")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_na2mc"]
atlas = ExtResource("3_k6dpk")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pl8or"]
atlas = ExtResource("2_a50ia")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vj8n3"]
atlas = ExtResource("2_a50ia")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nf3wn"]
atlas = ExtResource("2_a50ia")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpnko"]
atlas = ExtResource("2_a50ia")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojfjr"]
atlas = ExtResource("2_a50ia")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6tkn"]
atlas = ExtResource("2_a50ia")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnbaa"]
atlas = ExtResource("3_k6dpk")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tak48"]
atlas = ExtResource("2_vptny")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_etg6c"]
atlas = ExtResource("3_k6dpk")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tlruj"]
atlas = ExtResource("3_k6dpk")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmhj3"]
atlas = ExtResource("3_k6dpk")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksu05"]
atlas = ExtResource("3_k6dpk")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffoj2"]
atlas = ExtResource("2_vptny")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8g41y"]
atlas = ExtResource("2_vptny")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y24lw"]
atlas = ExtResource("2_vptny")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ber3q"]
atlas = ExtResource("4_nq80s")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5u46u"]
atlas = ExtResource("3_ieg1k")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rx3vw"]
atlas = ExtResource("3_ieg1k")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqguv"]
atlas = ExtResource("3_ieg1k")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4a3bp"]
atlas = ExtResource("3_ieg1k")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxk46"]
atlas = ExtResource("4_nq80s")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_svr8s"]
atlas = ExtResource("4_nq80s")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_av26k"]
atlas = ExtResource("4_nq80s")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fy24p"]
atlas = ExtResource("4_nq80s")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3afc"]
atlas = ExtResource("4_nq80s")
region = Rect2(192, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_100ny"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_strd3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wkfk8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wi1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ism3l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jynsj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xefeu")
}],
"loop": false,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 0.7,
"texture": SubResource("AtlasTexture_na2mc")
}, {
"duration": 0.9,
"texture": SubResource("AtlasTexture_pl8or")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_vj8n3")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_nf3wn")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_bpnko")
}, {
"duration": 0.9,
"texture": SubResource("AtlasTexture_ojfjr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6tkn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnbaa")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_tak48")
}],
"loop": false,
"name": &"doublejump",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnbaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_etg6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tlruj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmhj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_na2mc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksu05")
}],
"loop": false,
"name": &"fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffoj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8g41y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y24lw")
}],
"loop": false,
"name": &"gunidle",
"speed": 12.0
}, {
"frames": [{
"duration": 0.9,
"texture": SubResource("AtlasTexture_ber3q")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_5u46u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rx3vw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqguv")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_4a3bp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxk46")
}],
"loop": false,
"name": &"gunjump",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_svr8s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_av26k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxk46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fy24p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3afc")
}],
"loop": false,
"name": &"gunrun",
"speed": 15.0
}]

[sub_resource type="Curve" id="Curve_1v7rp"]
max_value = 0.5
_data = [Vector2(0, 0.0352113), 0.0, 0.0, 0, 0, Vector2(0.113122, 0.428571), 0.110389, 0.110389, 0, 0, Vector2(0.597285, 0), -0.811504, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_224pu"]
max_value = 0.5
_data = [Vector2(0, 0.0316901), 0.0, 0.0, 0, 0, Vector2(0.0723982, 0.39011), 0.0, 0.0, 0, 0, Vector2(0.20362, 0.0274725), -0.223074, -0.223074, 0, 0, Vector2(0.51532, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="Curve" id="Curve_2txmc"]
max_value = 0.6
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.0135747, 0.6), 0.0, 0.0, 0, 0, Vector2(0.122172, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_rlbob"]
max_value = 0.6
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.0226244, 0.6), 0.0, 0.0, 0, 0, Vector2(0.0995475, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Animation" id="Animation_dl5oi"]
resource_name = "IdleRigt "
loop_mode = 1

[sub_resource type="Animation" id="Animation_h7kvo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:sprite_frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("SpriteFrames_100ny")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ndcye"]
resource_name = "Runleft"
loop_mode = 1

[sub_resource type="Animation" id="Animation_8bytw"]
resource_name = "SpeedRight"
loop_mode = 1

[sub_resource type="Animation" id="Animation_dp88d"]
resource_name = "idleshockL"
loop_mode = 1

[sub_resource type="Animation" id="Animation_305b1"]
resource_name = "leftface"
length = 0.011
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:sprite_frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.01),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [SubResource("SpriteFrames_100ny"), SubResource("SpriteFrames_100ny")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.01),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.01),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-14.785, 0), Vector2(-14.785, 0)]
}

[sub_resource type="Animation" id="Animation_v77dw"]
resource_name = "rightface"
length = 0.011
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:sprite_frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.01),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [SubResource("SpriteFrames_100ny"), SubResource("SpriteFrames_100ny")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.01),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.01),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vhrnj"]
_data = {
"IdleRigt ": SubResource("Animation_dl5oi"),
"RESET": SubResource("Animation_h7kvo"),
"Runleft": SubResource("Animation_ndcye"),
"SpeedRight": SubResource("Animation_8bytw"),
"idleshockL": SubResource("Animation_dp88d"),
"leftface": SubResource("Animation_305b1"),
"rightface": SubResource("Animation_v77dw")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_bwgh6"]
atlas = ExtResource("11_6s631")
region = Rect2(756, 0, 63, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2p8e"]
atlas = ExtResource("11_6s631")
region = Rect2(693, 0, 63, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_md3it"]
atlas = ExtResource("11_6s631")
region = Rect2(621, 0, 69, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_wb5xw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwgh6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2p8e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwgh6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2p8e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md3it")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2p8e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md3it")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0p44e"]
size = Vector2(16, 30.6667)

[sub_resource type="CircleShape2D" id="CircleShape2D_x6iwv"]
radius = 28.0

[node name="Hero" type="CharacterBody2D" groups=["player"]]
scale = Vector2(1.5, 1.5)
collision_layer = 169
collision_mask = 41
script = ExtResource("1_43ipw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-14.6667, -29.3333)
sprite_frames = SubResource("SpriteFrames_100ny")
animation = &"gunrun"
frame = 4
frame_progress = 1.0
centered = false

[node name="WalknJumpR" type="Marker2D" parent="AnimatedSprite2D"]
position = Vector2(5.33337, 48)

[node name="WalknJumpL" type="Marker2D" parent="AnimatedSprite2D"]
position = Vector2(26, 47.3333)

[node name="JumpEffect" type="CPUParticles2D" parent="AnimatedSprite2D"]
unique_name_in_owner = true
show_behind_parent = true
position = Vector2(15.3334, 40)
scale = Vector2(0.5, 0.5)
emitting = false
amount = 1
lifetime = 0.25
one_shot = true
speed_scale = 2.45
explosiveness = 1.0
texture = ExtResource("10_o76pr")
direction = Vector2(0, 1)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 601.65
initial_velocity_max = 601.65
linear_accel_min = 10.47
linear_accel_max = 10.47
scale_amount_min = 0.4
scale_amount_max = 0.5
split_scale = true
scale_curve_x = SubResource("Curve_1v7rp")
scale_curve_y = SubResource("Curve_224pu")
color = Color(26.487, 12.973, 1, 1)

[node name="JumpEffect2" type="CPUParticles2D" parent="AnimatedSprite2D"]
unique_name_in_owner = true
show_behind_parent = true
position = Vector2(14, 42)
rotation = 1.58028
emitting = false
amount = 1
lifetime = 0.5
one_shot = true
speed_scale = 2.0
texture = ExtResource("11_x6ujp")
direction = Vector2(0, 0)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 318.66
initial_velocity_max = 318.66
linear_accel_min = 10.47
linear_accel_max = 10.47
angle_min = 96.0
angle_max = 96.0
scale_amount_min = 0.6
split_scale = true
scale_curve_x = SubResource("Curve_2txmc")
scale_curve_y = SubResource("Curve_rlbob")
color = Color(9.729, 23.783, 59.459, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_vhrnj")
}

[node name="SuperSayain" type="AnimatedSprite2D" parent="AnimatedSprite2D"]
visible = false
z_index = -1
position = Vector2(17.3334, 22)
scale = Vector2(0.854257, 0.72)
sprite_frames = SubResource("SpriteFrames_wb5xw")
autoplay = "default"
frame_progress = 0.1504

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
position = Vector2(1.333, 3.33333)
shape = SubResource("RectangleShape2D_0p44e")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="Camera" type="Camera2D" parent="."]
unique_name_in_owner = true
zoom = Vector2(1.15, 1.81)
limit_bottom = 550
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 20.0
script = ExtResource("12_ofnp4")

[node name="Gun" parent="." instance=ExtResource("10_0uu0a")]
show_behind_parent = true
position = Vector2(2, 0)

[node name="Gun2" parent="." instance=ExtResource("10_0uu0a")]
unique_name_in_owner = true
visible = false
z_index = -1
position = Vector2(4, -2.66667)
collision_mask = 0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_weta3")
volume_db = -2.616
pitch_scale = 4.0

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_qhkyu")
volume_db = -10.741
pitch_scale = 2.15
attenuation = 2.46229

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.898
one_shot = true

[node name="HurtBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(3.33333, 2)
shape = SubResource("CircleShape2D_x6iwv")
debug_color = Color(0.847059, 0.372549, 0.156863, 0)

[node name="HealthBar" parent="." instance=ExtResource("12_i3t22")]
show_behind_parent = true
offset_left = -16.6667
offset_top = -25.0
offset_right = 18.3333
offset_bottom = -22.0

[node name="Health" type="Sprite2D" parent="HealthBar"]
position = Vector2(-4.667, 1.4)
scale = Vector2(0.3, 0.3)
texture = ExtResource("12_j60bv")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
